--- a/html/setup.html
+++ b/html/setup.html
@@ -108,6 +108,7 @@
         <!-- Status items-->
         <ul class="status">
             <li class="pending">Testing MongoDB Connection</li>
+            <li class="pending">Testing MongoDB Admin User (Credential Check)</li>
             <li class="pending">Testing MongoDB Admin Power</li>
             <li class="pending">Testing Third-Party Login Server (connectivity / test curl)</li>
         </ul>
