--- a/html/setup.html
+++ b/html/setup.html
@@ -113,8 +113,14 @@
             <li class="pending">Testing Third-Party Login Server (connectivity / test curl)</li>
         </ul>
 
-        <p class="message success" hidden>No issues! Form will now submit.</p>
-        <p class="message fail" hidden>Please check the above issues. Form will not submit.</p>
+        <div class="message success">
+            <h3>Test successful</h3>
+            <p>No issues! Form will now submit.</p>
+        </div>
+        <div class="message fail">
+            <h3>Test failed</h3>
+            <p>Please check the above issues. Form will not submit.</p>
+        </div>
     </div>
 
 </form>
