--- a/html/setup.html
+++ b/html/setup.html
@@ -113,11 +113,11 @@
             <li class="pending">Testing Third-Party Login Server (connectivity / test curl)</li>
         </ul>
 
-        <div class="message success">
+        <div class="message success" hidden>
             <h3>Test successful</h3>
             <p>No issues! Form will now submit.</p>
         </div>
-        <div class="message fail">
+        <div class="message fail" hidden>
             <h3>Test failed</h3>
             <p>Please check the above issues. Form will not submit.</p>
         </div>
