--- a/html/setup.html
+++ b/html/setup.html
@@ -34,7 +34,7 @@
             <input type="text" name="UL_DB_HOST" placeholder="MongoDB Hostname"/>
     <input type="text" name="UL_DB_ROOT_USER" placeholder="MongoDB Username"/>
             <input type="password" name="UL_DB_ROOT_PASS" placeholder="MongoDB Password"/>
-            <input type="text" name="UL_DB_NAME_PREFIX" placeholder="MongoDB Database Name Prefix"/>
+            <input type="text" name="UL_DB_NAME_PREFIX" placeholder="MongoDB Database Name Prefix (Optional)"/>
         </div>
 
         <!-- Next Button -->
