--- a/html/setup.html
+++ b/html/setup.html
@@ -115,7 +115,7 @@
 
         <div class="message success" hidden>
             <h3>Test successful</h3>
-            <p>No issues! Form will now submit.</p>
+            <p>No issues! Form will now submit in <span>5</span> second<span>s</span>...</p>
         </div>
         <div class="message fail" hidden>
             <h3>Test failed</h3>
