--- a/html/setup.html
+++ b/html/setup.html
@@ -10,7 +10,7 @@
     <!-- Global page style -->
     <link rel="stylesheet" href="/assets?file=global.css">
 </head>
-<body class="setup">
+<body class="minima">
 <form method="POST">
 
     <!-- Page Title -->
@@ -32,7 +32,7 @@
         <!-- Inputs -->
         <div class="inputs">
             <input type="text" name="UL_DB_HOST" placeholder="MongoDB Hostname"/>
-    <input type="text" name="UL_DB_ROOT_USER" placeholder="MongoDB Username"/>
+            <input type="text" name="UL_DB_ROOT_USER" placeholder="MongoDB Username"/>
             <input type="password" name="UL_DB_ROOT_PASS" placeholder="MongoDB Password"/>
             <input type="text" name="UL_DB_NAME_PREFIX" placeholder="MongoDB Database Name Prefix (Optional)"/>
         </div>
