--- a/html/setup.html
+++ b/html/setup.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="/assets?file=global.css">
 </head>
 <body class="minima">
-<form method="POST">
+<form method="POST" id="setup">
 
     <!-- Page Title -->
     <h1 class="header">First time setup</h1>
