--- a/html/setup-done.html
+++ b/html/setup-done.html
@@ -18,7 +18,9 @@
         You will no longer see this page, once you do a
         refresh, so please note this
     </p>
-    <pre></pre>
+    <div class="no-overflow">
+        <pre></pre>
+    </div>
     <p>
         To skip the setup, add these variables to server's
         environment variables.
