--- a/html/init/index.html
+++ b/html/init/index.html
@@ -48,7 +48,7 @@
 
         <!-- Panel title -->
         <h2>Get admin token</h2>
-        <a href="#">Show token</a> | <a href="#">Generate new token</a>
+        <a href="#">Generate new token</a>
 
         <!-- Admin token -->
         <pre class="admin-token">Basic Guide:<br/><br/>Press "Show token" to show the admin token.<br/>Press "Generate new token" to generate new admin token.</pre>
