--- a/html/init/index.html
+++ b/html/init/index.html
@@ -36,8 +36,8 @@
         <h2>Manage other instance</h2>
 
         <form method="POST">
-            <input type="text" name="server_url" placeholder="Server URL">
-            <input type="password" name="secret_admin_key" placeholder="Secret admin key">
+            <input type="text" name="url" placeholder="Server URL">
+            <input type="password" name="key" placeholder="Secret admin key">
             <button class="right">Manage</button>
             <div class="clearfix"></div>
         </form>
